--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,3 +5,7 @@ workflows:
       - ./gradlew assembleDebug
     artifacts:
       - build/outputs/**/**/*.apk
+    - publishing:
+        email:
+          recipients:
+              - abimulya.2001@gmail.com
