--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,7 @@ workflows:
       - ./gradlew assembleDebug
     artifacts:
       - app/build/**/outputs/**/*.apk
-    - publishing:
+    publishing:
         email:
           recipients:
               - abimulya.2001@gmail.com
