--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tugasmobileprog" >
+    package="com.example.tugasmobileprog">
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -8,10 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Tugasmobileprog.NoActionBar" >
-        <activity android:name=".ui.calculator.CalculatorActivity" >
-        </activity>
-        <activity android:name=".ui.splash.SplashScreen" >
+        android:theme="@style/Theme.Tugasmobileprog.NoActionBar">
+        <activity android:name=".ui.sms.SmsActivity"/>
+        <activity android:name=".ui.calculator.CalculatorActivity" />
+        <activity android:name=".ui.splash.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
